--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
+springboot-movements-service/bin/target/test-classes/com/everis/
 /.metadata/
 /.metadata/
